Invalidating composer.json to get around some weird plugins.roundcube.net caching problem when submitting plugin

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         {
             "name": "ashabada",
             "email": "staphspam@gmail.com",
-            "homepage": "https://github.com/ashabada/login_history",
+            "homepage": "https://github.com/ashabada/login_history"
             "role": "Developer"
         }
     ],
